--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ parking_lot = "0.12"
 rlp = "0.5.1"
 thiserror = "1.0.32"
 bytes = { version = "1.4.0", features = ["serde"] }
+serde_json = "1.0.96"
+bincode = "1.3.3"
+serde = { version = "1.0.163", features = ["derive"] }
+hex = { version = "0.4.2", features = ["serde"] }
+serde_bytes = "0.11.9"
 
 [dev-dependencies]
 rand = "0.8.3"
