--- a/pmt/Cargo.toml
+++ b/pmt/Cargo.toml
@@ -7,12 +7,12 @@ authors = ["VRRB Labs <info@vrrb.io>"]
 
 [lib]
 name = "pmt"
-path = "pmt"
 
 [dependencies]
 left-right = { workspace = true }
 hashbrown = { workspace = true }
 keccak-hash = { workspace = true }
+fixed-hash = { workspace = true }
 log = { workspace = true }
 parking_lot = { workspace = true }
 rlp = { workspace = true }
