feat: Expose `Trie` methods for `JellyfishMerkleTrie` (#17)
Adds implementations for `Database` (Now `VersionedDatabase`) on `MockTreeStore` and `Trie`(`VersionedTrie`) on `JellyfishMerkleTree`, exposing some convenience methods that are already in use by the protocol codebase.

Some methods are left untouched since they are already a part of the `jmt` library and can be used as is. I've updated the traits with documentation where applicable and added tests for methods that don't already have them (some methods are wrappers so they maintain their original tests).

Closes #16

--- a/jmt/Cargo.toml
+++ b/jmt/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "jmt"
 description = "Jellyfish Merkle Tree"
-version = "0.1.0"
+version = "1.0.0"
 authors = [
     "VRRB Labs <info@vrrb.io>",
     "Penumbra Labs <team@penumbra.zone>",
@@ -26,13 +26,14 @@ itertools = { workspace = true }
 mirai-annotations = { workspace = true }
 num-derive = { workspace = true }
 num-traits = { workspace = true }
+pmt = { path = "../pmt" }
 serde = { workspace = true }
 sha2 = { workspace = true }
 hex = { workspace = true }
 tracing = { workspace = true }
 ics23 = { version = "0.10.0", optional = true }
-parking_lot = { version = "0.12.1", optional = true } 
-thiserror = { version = "1.0.32", optional = true } 
+parking_lot = { version = "0.12.1", optional = true }
+thiserror = { version = "1.0.32", optional = true }
 
 [dev-dependencies]
 hex = { workspace = true }
