--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ fixed-hash = { workspace = true }
 serde_hash = { workspace = true }
 jmt = { workspace = true }
 
+[features]
+mocks = []
+
 [workspace]
 members = [
     "jmt",
@@ -32,7 +35,10 @@ members = [
 
 [workspace.dependencies]
 serde_hash = { path = "serde_hash" }
-jmt = { path = "jmt", features = ["mocks"] }
+#[cfg(any(tests, features = "mocks"))]
+mock_jmt = { path = "jmt", features = ["mocks"] }
+#[cfg(not(any))]
+jmt = { path = "jmt" }
 left-right = "0.11.5"
 keccak-hash = "0.9"
 fixed-hash = "0.7.0"
