--- a/jmt/Cargo.toml
+++ b/jmt/Cargo.toml
@@ -34,6 +34,7 @@ tracing = { workspace = true }
 ics23 = { version = "0.10.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
 thiserror = { version = "1.0.32", optional = true }
+bincode = "1.3.3"
 
 [dev-dependencies]
 hex = { workspace = true }
